force-app/main/default/objects/KimbleOne__IssueResolution__c/KimbleOne__IssueResolution__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Issue Resolution</label>
    <nameField>
        <displayFormat>IR-{00000}</displayFormat>
        <label>Issue Resolution Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue Resolutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>