force-app/main/default/objects/KimbleOne__IssueResolution__c/fields/KimbleOne__AssignedToContact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AssignedToContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Issue Resolutions</relationshipLabel>
    <relationshipName>IssueResolutions</relationshipName>
    <type>Lookup</type>
</CustomField>