force-app/main/default/objects/KimbleOne__IssueResolution__c/fields/KimbleOne__ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ClosedDate__c</fullName>
    <label>Closed Date</label>
    <type>Date</type>
</CustomField>