force-app/main/default/objects/KimbleOne__IssueResolution__c/fields/KimbleOne__DueDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DueDate__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>