force-app/main/default/objects/KimbleOne__IssueResolution__c/fields/KimbleOne__Issue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Issue__c</fullName>
    <label>Issue</label>
    <referenceTo>KimbleOne__Issue__c</referenceTo>
    <relationshipLabel>Issue Resolutions</relationshipLabel>
    <relationshipName>Issue_Resolutions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>